<resources>
    <string name="app_name">Brookes Nutrition</string>
    <string name="action_settings">Settings</string>
    <string name="text_name">Name: </string>
    <string name="text_age">Age: </string>
    <string name="name_error">Enter a valid name</string>
    <string name="age_error">Enter an age between 13 and 99</string>
    <string name="text_height">Height: </string>
    <string name="text_sex">Sex: </string>
    <string name="text_mass">Mass: </string>
    <string-array name="M_or_F">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="profile">Profile</string>
    <string name="NA">N/A</string>
    <string name="text_BMR">BMR: </string>
    <string name="progress">Progress</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Progress</string>
    <string name="tab_text_3">Workouts</string>
<<<<<<< HEAD
    <string name="tab_text_4">Eaten</string>
=======
>>>>>>> Initial commit

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag1">Frag 1</string>
    <string name="frag2">Frag 2</string>
    <string name="frag3">Frag 3</string>
<<<<<<< HEAD
    <string name="frag4">Frag 4</string>
=======

>>>>>>> Initial commit
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="default_notification_channel_id" />
    <string name="notification_channel_title" />
    <string name="dbnode_users" />
    <string name="field_messaging_token" />

    <string-array name="ingredients">

=======
    <string-array name="fitness_plans">
||||||| constructed merge base
    <string-array name="fitness_plans">
=======
    <string-array name="fitness_plan">
>>>>>>> Sprint 4 Stuff
        <item>Weight Loss</item>
        <item>Bulk</item>
        <item>Cardio</item>
>>>>>>> Initial commit
    </string-array>
</resources>
